--- a/penn-housing-review/src/App.css
+++ b/penn-housing-review/src/App.css
@@ -23,22 +23,28 @@ body {
   text-decoration-line: underline;
   cursor: pointer;
   margin-right: 20px;
+  color: #4A4A4A;
+  
 }
 
 .logo-title {
   display: flex;
   align-items: center; /* center items vertically */
+  justify-content: center;
 }
 
 .logo-title img {
-  width: 120px; /* set width of logo image */ 
+  width: 60px; /* set width of logo image */ 
+  padding-right: 10px;
+  padding-bottom: 5px;
 }
 
 .main-title {
-  font-size: 64px; /* set font size for title */
+  font-size: 52px; /* set font size for title */
   font-weight: bold; /* set font weight for title */
   text-align: center;
-  color:#4a4a4a
+  color:#4a4a4a;
+  white-space: nowrap;
 }
 
 .main-body {
@@ -49,35 +55,50 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.search-box {
+  
+  margin: 0;
+
+}
+
+
 .search {
   display: block;
   margin: 0 auto;
   padding: 10px;
   font-size: 1.5em;
   border-radius: 30px;
-  width: 80%;
-  max-width: 500px;
+  width: 100%;
+  max-width: 800px;
+  
   border: 1px solid #868686;
   color: #4a4a4a;
+
+
+
 }
 
 .search:focus {
   outline:none;
 }
 
+
 .search-results {
   position: absolute;
   top: 100%;
-  left: 0;
-  right: 0;
+  left: 2%;
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: 1px solid #eaeaea;
+  border-radius: 5px;
   list-style: none;
-  padding: 0;
+  padding-left: 10px;
   margin: 0;
+  width: 97%;
+  max-width: 800px;
+  box-shadow: 1px 1px 0px rgb(193, 193, 193);
   display: none;
-  z-index: 1;
-  width: 100%
+
+  
 }
 
 .search-results li {
@@ -87,3 +108,4 @@ body {
 .search-box input:focus + .search-results {
   display: block;
 }
+
