--- a/penn-housing-review/src/App.css
+++ b/penn-housing-review/src/App.css
@@ -87,12 +87,12 @@ body {
 .search-results {
   position: absolute;
   top: 100%;
-  left: 2%;
+  left: 3%;
   background-color: #fff;
   border: 1px solid #eaeaea;
   border-radius: 5px;
   list-style: none;
-  padding-left: 10px;
+  padding-left: 0px;
   margin: 0;
   width: 97%;
   max-width: 800px;
@@ -104,9 +104,15 @@ body {
 
 .search-results li {
   padding: 8px;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 .search-box input:focus + .search-results {
   display: block;
+}
+
+.search-results li:hover {
+  background:#868686;
 }
 
