--- a/penn-housing-review/src/styles/UserProfile.css
+++ b/penn-housing-review/src/styles/UserProfile.css
@@ -1,7 +1,7 @@
 /* UserProfile.css */
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 .user-profile {
-    padding-top: 150px;
+    padding-top: 0px;
     background-color: #F3F9ED;
     min-height: 100vh;
     font-family: 'Lato', sans-serif; /* Set the font family to Lato */
@@ -38,6 +38,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .banner-logo {
+    height: 45px; /* Adjust the logo size as needed */
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20px; /* Add some margin to the left of the logo */
   }
 
   /* UserProfile.css */
