--- a/Frontend/src/components/ReviewPage.css
+++ b/Frontend/src/components/ReviewPage.css
@@ -1,7 +1,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
 }
 
 .header {
@@ -56,19 +55,19 @@
 
 .main {
   display: flex;
+  flex-direction: row;
   flex: 1;
   padding: 20px;
 }
 
 .description-view {
-  flex: 1;
+  flex: 1.3;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 20px;
-  width: 10%;
+  width: 30%;
   position: relative;
-  right: 2%;
+  right: 5%;
 }
 
 .apartment-name {
@@ -86,7 +85,13 @@
 }
 
 .review-view {
-  flex: 2.5;
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  position: relative;
+  left: 5%;
 }
 
 .filter-dropdown {
@@ -95,13 +100,14 @@
 
 .post-review-button {
   margin-bottom: 20px;
-  padding: 5px;
   background-color: green;
   color: #fff;
   text-decoration: none;
   text-align: center;
   font-weight: bold;
   border-radius: 5px;
+  position: relative;
+  right: 100%;
 }
 
 .reviews {
@@ -180,8 +186,8 @@
 }
 
 .post-review {
-  position: absolute;
-  left: 80%;
+  position: relative;
+  left: 50%;
 }
 
 .review-user {
